added node + js

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Notes</title>
 </head>
 <body>
-    <a href="/reactjs/index.html">react</a>
+    <a href="/js/index.html">javascript</a>    
+    <a href="/reactjs/index.html">reactjs</a>
+    <a href="/nodejs/index.html">nodejs</a>
 </body>
 </html>
