--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Notes</title>
 </head>
 <body>
-    <a href="/js/index.html">javascript</a>    
-    <a href="/reactjs/index.html">reactjs</a>
-    <a href="/nodejs/index.html">nodejs</a>
+    <ul>
+        <li><a href="/js/index.html"></a>js</li>
+        <li><a href="/reactjs//index.html">reactjs</a></li>
+        <li><a href="/nodejs/index.html">nodejs</a></li>
+    </ul>
 </body>
 </html>
