--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="/js/index.html"></a>js</li>
+        <li><a href="/js/index.html">js</a></li>
         <li><a href="/reactjs//index.html">reactjs</a></li>
         <li><a href="/nodejs/index.html">nodejs</a></li>
     </ul>
