--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Notes</title>
-</head>
-<body>
+  </head>
+  <body>
     <ul>
-        <li><a href="/js/index.html">js</a></li>
-        <li><a href="/reactjs//index.html">reactjs</a></li>
-        <li><a href="/nodejs/index.html">nodejs</a></li>
+      <li><a href="/js/index.html">js</a></li>
+      <li><a href="/reactjs//index.html">reactjs</a></li>
+      <li><a href="/nodejs/index.html">nodejs</a></li>
+      <li><a href="/security/index.html">security</a></li>
     </ul>
-</body>
+  </body>
 </html>
