--- a/reactjs/Essential React Libraries.html
+++ b/reactjs/Essential React Libraries.html
@@ -23,13 +23,14 @@
       <style> .text-cell {font-size: 15px;}.code-cell {font-size: 12px;}.markdown-cell {font-size: 15px;}.latex-cell {font-size: 15px;}</style>
     </head>
     <body>
-      <div id="nav"><div>Next: <a href='Controlled Components.html'>Controlled Components</a>, Up: <a href='index.html'>Index</a></div></div>
+      <div id="nav"><div>Next: <a href='Controlled Components.html'>Controlled Components</a>, Previous: <a href='Installation - test update.html'>Installation - test update</a>, Up: <a href='index.html'>Index</a></div></div>
       <div id="titlearea">
         <h2>Essential React Libraries</h2>
       </div>
       <div id="contentarea"><div class="cell text-cell"><h1>Boilerplates</h1><div><ul><li>Create-react-app</li><li>Gatsby.js für statische Webseiten</li><li>Next.js für Server-side rendered react</li></ul><div>Für Authentifizierung gibt es ein Boilerplate welche mit gasby verknüpft ist:</div></div><div><ul><li>Gatsby-firebare-authentication</li></ul><h1>Utility Libraries</h1></div><div><ul><li>ES6</li><li>Lodash</li><li>Ramda für functional programming</li></ul><h1>Styling</h1></div><div><ul><li>plain CSS / Inline Style</li><li>classnames library</li><li>CSS Modules oder Styled Components</li></ul><h1>Asynchrone Requests</h1></div><div><ul><li>native fetch API</li><li>Axios</li></ul><h1>Type checking</h1></div><div><ul><li>React’s proptypes</li><li>flow / typescript</li></ul><h1>Formatting</h1></div><div><ul><li>Style guide (airbnb)</li><li>Prettier</li></ul><h1>Component Libraries</h1></div><div><ul><li>Semantic UI</li></ul><h1>State Management</h1></div><div><ul><li>React’s local state</li><li>Redux or MobX</li><ul><li>nur wenn notwendig</li></ul></ul><h1>Routing</h1></div><div><ul><li>React’s rendering</li><li>React router</li></ul><h1>Authentication</h1></div><div><ul><li>Firebase</li></ul><h1>Testing</h1></div><div><ul><li>Mocha(Test Runner), Chai(Business Logic), Sinon(Async Logic)</li><li>Mocha, Chai, Enzyme, Jest &amp; Sinon</li><li>Jest</li></ul><h1>Time</h1></div><div><ul><li>momentjs&nbsp;</li><li>Date-fns</li></ul><div><br></div></div><div><br></div></div></div>
       <script>document.body.onkeyup = function(e) {
 if (e.keyCode === 39) window.location.href = 'Controlled Components.html';
+if (e.keyCode === 37) window.location.href = 'Installation - test update.html';
 }</script>
     </body>
     </html>
