--- a/reactjs/React app from scratch.html
+++ b/reactjs/React app from scratch.html
@@ -23,27 +23,14 @@
       <style> .text-cell {font-size: 15px;}.code-cell {font-size: 12px;}.markdown-cell {font-size: 15px;}.latex-cell {font-size: 15px;}</style>
     </head>
     <body>
-      <div id="nav"><div>Previous: <a href='Projektstruktur.html'>Projektstruktur</a>, Up: <a href='index.html'>Index</a></div></div>
+      <div id="nav"><div>Next: <a href='Installation - test update.html'>Installation - test update</a>, Previous: <a href='Emotion.html'>Emotion</a>, Up: <a href='index.html'>Index</a></div></div>
       <div id="titlearea">
-        <h2>Props</h2>
+        <h2>React app from scratch</h2>
       </div>
-      <div id="contentarea"><div class="cell text-cell"><b>Wofür brauchen wir props?</b><div>React ist gut darin states zu managen. Ein Grund dafür ist, dass es einfach möglich ist Daten von einem Component an Child-Components weiterzugeben. Und der Weg dafür sind <b>props</b>.<br><div><div><br></div></div></div></div><div class="cell text-cell"><ul><li>props sind für Components was Argumente für Funktionen sind.</li></ul></div><div class="cell text-cell">Hier ist ein einfaches Beispiel für props:</div><div class="cell code-cell"><div class="ace-tomorrow-night-eighties"><div class="ace_static_highlight ace_show_gutter" style="counter-reset:ace_line 0"><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_keyword">class</span> <span class="ace_identifier">HelloUser</span> <span class="ace_keyword">extends</span> <span class="ace_identifier">React</span><span class="ace_punctuation ace_operator">.</span><span class="ace_identifier">Component</span><span class="ace_paren ace_lparen">{</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span>    <span class="ace_identifier">render</span><span class="ace_paren ace_lparen">(</span><span class="ace_paren ace_rparen">)</span><span class="ace_paren ace_lparen">{</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_indent-guide">    </span>  <span class="ace_keyword">return</span><span class="ace_paren ace_lparen">(</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_indent-guide">    </span><span class="ace_indent-guide">    </span>  <span class="ace_meta ace_tag ace_punctuation ace_tag-open ace_xml">&lt;</span><span class="ace_meta ace_tag ace_tag-name ace_xml">div</span><span class="ace_meta ace_tag ace_punctuation ace_tag-close ace_xml">&gt;</span><span class="ace_string">`Hello, $</span><span class="ace_paren ace_quasi ace_start">{</span><span class="ace_variable ace_language">this</span><span class="ace_punctuation ace_operator">.</span><span class="ace_identifier">props</span><span class="ace_punctuation ace_operator">.</span><span class="ace_identifier">name</span><span class="ace_paren ace_quasi ace_end">}</span><span class="ace_string">`</span><span class="ace_meta ace_tag ace_punctuation ace_end-tag-open ace_xml">&lt;/</span><span class="ace_meta ace_tag ace_tag-name ace_xml">div</span><span class="ace_meta ace_tag ace_punctuation ace_tag-close ace_xml">&gt;</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_indent-guide">    </span>    <span class="ace_paren ace_rparen">)</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span>    <span class="ace_paren ace_rparen">}</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_paren ace_rparen">}</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_identifier">ReactDOM</span><span class="ace_punctuation ace_operator">.</span><span class="ace_identifier">render</span><span class="ace_paren ace_lparen">(</span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span>  <span class="ace_meta ace_tag ace_punctuation ace_tag-open ace_xml">&lt;</span><span class="ace_meta ace_tag ace_tag-name ace_xml">HelloUser</span><span class="ace_text ace_tag-whitespace ace_xml"> </span>
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_text ace_tag-whitespace ace_xml">    </span><span class="ace_entity ace_other ace_attribute-name ace_xml">name</span><span class="ace_keyword ace_operator ace_attribute-equals ace_xml">=</span><span class="ace_string ace_attribute-value ace_xml">"Valentino"</span>),
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_text ace_tag-whitespace ace_xml">    </span><span class="ace_entity ace_other ace_attribute-name ace_xml">document</span>.<span class="ace_entity ace_other ace_attribute-name ace_xml">getElementById</span>(<span class="ace_string ace_attribute-value ace_xml">'app'</span>)
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_text ace_tag-whitespace ace_xml">  </span>);
-</div><div class="ace_line"><span class="ace_gutter ace_gutter-cell" unselectable="on"></span><span class="ace_text ace_tag-whitespace ace_xml">  </span><span class="ace_meta ace_tag ace_punctuation ace_tag-close ace_xml">/&gt;</span>
-</div></div></div></div><div class="cell text-cell">Wir geben dem Component „HelloUser“ ein prop mit welches über props.name erreichbar ist.</div></div>
+      <div id="contentarea"></div>
       <script>document.body.onkeyup = function(e) {
-if (e.keyCode === 37) window.location.href = 'Projektstruktur.html';
+if (e.keyCode === 39) window.location.href = 'Installation - test update.html';
+if (e.keyCode === 37) window.location.href = 'Emotion.html';
 }</script>
     </body>
     </html>
